# jnihook

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xiaobai/com/jnihook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/Hook/: CMakeLists.txt  Helper.cpp  Helper.h  HookHelper.cpp  HookHelper.h  HookInfo.h  LogHex.cpp  LogHex.h  Readme.md  main.cpp
app/src/main/cpp/Hook/instruction/: Arm64Instruction.cpp  Arm64Instruction.h  ArmInstruction.cpp  ArmInstruction.h  Instruction.cpp  Instruction.h  IntelDisasm.cpp  IntelDisasm.h  IntelInstruction.cpp  IntelInstruction.h  Mips64Instruction.cpp  Mips64Instruction.h  MipsInstruction.cpp  MipsInstruction.h  ThumbInstruction.cpp  ThumbInstruction.h
app/src/main/cpp/jnihook/: CMakeLists.txt  DexDefine.H  JNIInterface.h  JniHook.cpp  JniHook.h  Main.cpp  VM.cpp  VM.h  fake_dlfcn.cpp  fake_dlfcn.h
app/src/main/java/xiaobai/com/jnihook/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/xiaobai/com/jnihook/: ExampleUnitTest.java
